--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&family=Open+Sans:wght@300;400;600;700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title>Home</title>
+  <title>Crowdme</title>
 </head>
 
 <body>
-  <header>
-    <nav>
-      <div class="nav__logo">Startup</div>
+      <nav>
+      <div class="logo">Crowdme</div>
       <ul>
-        <li>Home</li>
-        <li>Services</li>
-        <li>About</li>
-        <li>Works</li>
-        <li>Blog</li>
-        <li>Clients</li>
-        <li>Contact</li>
+        <li>HOME</li>
+        <li>HOW IT WORKS</li>
+        <li>DISCOVER A PROJECT</li>
+        <li>BLOG</li>
+        <li>FINT OUT MORE</li>
       </ul>
+      <button>Login</button>
     </nav>
+  <header>
+
   </header>
 
 
